# jsonschema-data

./: README.md  jsonschema_data.py  setup.cfg  tests.py
