[metadata]
name = jsonschema-data
url = https://github.com/FelixLouis/jsonschema-data
description = extends jsonschema validation to include the data keyword
long_description = file: README.md
author = Failix
author_email = failix@laposte.net
license = GNU General Public License v3.0

[options]
packages = find:
install_requires =
    jsonschema
